--- a/index-dev.html
+++ b/index-dev.html
@@ -1341,7 +1341,7 @@ end`;
 
             } catch (error) {
                 console.error("Failed to initialize the configurator:", error);
-                document.querySelector('.container').innerHTML = '<h1>Initialization Error</h1><p style="color: red;">Could not load essential configuration files (e.g., basecommands.txt or tweakdata.txt). Please check that the files exist and refresh the page.</p>';
+                document.querySelector('.container').innerHTML = '<h1>Initialization Error</h1><p style="color: red;">Could not load essential configuration files (e.g., mapsmodes.txt or tweakdata.txt). Please check that the files exist and refresh the page.</p>';
             }
         }
 
