--- a/index-dev.html
+++ b/index-dev.html
@@ -293,29 +293,7 @@
         </div>
 
         <div id="config-tab" class="tab-content active">
-            <div class="settings-container">
-                <h2>NuttyB Tweaks</h2>
-                <div id="options-form-columns">
-                    <div class="options-column" id="left-column">
-                        <p>Loading configuration data...</p>
-                    </div>
-                    <div class="options-column" id="right-column"></div>
-                </div>
-                <div class="action-buttons-container">
-                    <button id="reset-default-btn" class="action-button">Reset</button>
-                    <button id="reset-none-btn" class="action-button">None</button>
-                </div>
-            </div>
-
-            <div id="custom-settings-container" class="settings-container" style="display: none;">
-                <h2>Custom Tweaks</h2>
-                <div id="custom-options-form-columns">
-                    <div class="options-column" id="custom-left-column"></div>
-                    <div class="options-column" id="custom-right-column"></div>
-                </div>
-                <div id="slot-warning-messages"></div>
-            </div>
-
+            <!-- MODIFIED: Sections reordered -->
             <div class="output-container">
                 <h2>Generated Commands</h2>
                 <p>Copy and paste all parts separately to the lobby</p>
@@ -351,6 +329,29 @@
                 <div class="lobby-name-output">
                     <strong>Lobby Name:</strong> <span id="lobby-name-display">Loading...</span>
                 </div>
+            </div>
+
+            <div class="settings-container">
+                <h2>NuttyB Tweaks</h2>
+                <div id="options-form-columns">
+                    <div class="options-column" id="left-column">
+                        <p>Loading configuration data...</p>
+                    </div>
+                    <div class="options-column" id="right-column"></div>
+                </div>
+                <div class="action-buttons-container">
+                    <button id="reset-default-btn" class="action-button">Reset</button>
+                    <button id="reset-none-btn" class="action-button">None</button>
+                </div>
+            </div>
+
+            <div id="custom-settings-container" class="settings-container" style="display: none;">
+                <h2>Custom Tweaks</h2>
+                <div id="custom-options-form-columns">
+                    <div class="options-column" id="custom-left-column"></div>
+                    <div class="options-column" id="custom-right-column"></div>
+                </div>
+                <div id="slot-warning-messages"></div>
             </div>
         </div>
 
@@ -442,7 +443,7 @@
         const tabContents = document.querySelectorAll('.tab-content');
         const resetNoneBtn = document.getElementById('reset-none-btn');
         const resetDefaultBtn = document.getElementById('reset-default-btn');
-        const MAX_SECTION_LENGTH = 55000;
+        const MAX_SECTION_LENGTH = 50000;
 
         // --- Lua Templates and Generator Logic ---
         const luaQhpTemplate = `--NuttyB v1.52 __MULTIPLIER_TEXT__X QHP
@@ -1093,7 +1094,6 @@ end`;
             updateOutput();
         }
 
-        // --- MODIFIED: Added logic for all Scavengers mode dependencies ---
         function updateOutput() {
             const modesSelect = document.getElementById('modes-select');
             const extrasSelect = document.querySelector('select[data-option-type="Extras"]');
@@ -1108,7 +1108,7 @@ end`;
                 [extrasSelect, raptorHpSelect, queenHpSelect].forEach(selector => {
                     if (selector) {
                         if (isScavengers) {
-                            selector.value = ""; // Set to "None" or "Default"
+                            selector.value = ""; 
                             selector.disabled = true;
                         } else {
                             selector.disabled = false;
