--- a/index-dev.html
+++ b/index-dev.html
@@ -482,8 +482,8 @@ for f, g in pairs(UnitDefs) do
 end
 
 local h = UnitDef_Post
-function UnitDef_Post(i, j)
-	h(i, j)
+function UnitDef_Post(j, k)
+	h(j, k)
 	if k.customparams and k.customparams.subfolder and k.customparams.subfolder == 'other/raptors' then
 		if k then
 			__METAL_COST_LINE__
@@ -491,8 +491,8 @@ function UnitDef_Post(i, j)
 			-- Create a formatted message and print it to the in-game console.
 			local message = string.format(
 				"RAPTOR POST-PROCESSED: %s -> metalcost to %d, nochasecategory to OBJECT",
-				name,
-				uDef.metalcost or 0
+				j,
+				k.metalcost or 0
 				)
 			Spring.Echo(message)
 		end
