--- a/index-dev.html
+++ b/index-dev.html
@@ -12,19 +12,15 @@
         body {
             font-family: sans-serif;
             margin: 20px;
-            line-height: 1.5; /* Adjusted line-height */
+            line-height: 1.6;
             background-color: #121212;
             color: #e0e0e0;
-            font-size: 14px; /* Reduced base font size */
         }
         h1, h2, h3 {
             color: #f5f5f5;
             margin-top: 0px;
             margin-bottom: 16px;
         }
-        h1 { font-size: 1.8em; } /* Adjusted heading sizes */
-        h2 { font-size: 1.4em; }
-        h3 { font-size: 1.1em; }
         a { color: #4caf50; }
         .container {
             max-width: 950px;
@@ -40,7 +36,7 @@
             border-bottom: 1px solid #333;
         }
         .tab-button {
-            padding: 9px 16px; /* Reduced padding */
+            padding: 10px 18px;
             cursor: pointer;
             background-color: #2c2c2c;
             border: 1px solid #333;
@@ -48,7 +44,7 @@
             border-top-left-radius: 6px;
             border-top-right-radius: 6px;
             color: #aaa;
-            font-size: 0.95em; /* Reduced font size */
+            font-size: 1em;
             margin-right: 2px;
             position: relative;
             transition: background-color 0.2s ease, color 0.2s ease;
@@ -94,9 +90,9 @@
         /* Key change: Reduced vertical spacing for tweak options */
         #left-column label, #right-column label, #custom-options-form-columns label {
             display: block;
-            margin-bottom: 3px; /* Reduced margin */
+            margin-bottom: 3px; /* Reduced from 8px */
             cursor: pointer;
-            padding: 2px; /* Reduced padding */
+            padding: 3px;
             border-radius: 4px;
             transition: background-color 0.2s ease;
         }
@@ -105,9 +101,9 @@
         }
         input[type="checkbox"] {
             accent-color: #66bb6a;
-            width: 1.1em; /* Shrunk checkbox */
-            height: 1.1em; /* Shrunk checkbox */
-            margin-right: 6px; /* Adjusted margin */
+            width: 1.2em;
+            height: 1.2em;
+            margin-right: 8px;
             vertical-align: middle;
         }
         input[type="checkbox"]:disabled { cursor: not-allowed; }
@@ -121,7 +117,7 @@
             cursor: not-allowed;
         }
         input[type="checkbox"]:disabled:checked::after {
-            content: '✓'; display: block; font-size: 1em; /* Adjusted size */
+            content: '✓'; display: block; font-size: 1.1em;
             font-weight: bold; color: #1e1e1e;
             position: absolute; top: 50%; left: 50%;
             transform: translate(-50%, -50%); line-height: 0;
@@ -130,8 +126,7 @@
             box-sizing: border-box; margin-left: 5px;
             background-color: #4a4a4a; color: #f0f0f0;
             border: 1px solid #777; border-radius: 4px;
-            padding: 2px 6px; font-size: 1em; /* Adjusted font size to be relative */
-            vertical-align: middle; 
+            padding: 2px 6px; font-size: 0.9em; vertical-align: middle; 
             transition: border-color 0.2s ease, box-shadow 0.2s ease;
         }
         select:focus {
@@ -142,7 +137,7 @@
         
         .command-output-section { 
             display: grid;
-            grid-template-columns: 120px 1fr; /* Adjusted column width */
+            grid-template-columns: 130px 1fr;
             gap: 15px;
             align-items: start;
             margin-bottom: 12px;
@@ -153,14 +148,12 @@
             border: 1px solid #555; border-radius: 4px;
             font-family: monospace; white-space: pre-wrap; word-wrap: break-word;
             resize: vertical; background-color: #1e1e1e; color: #f5f5f5;
-            font-size: 0.9em;
         }
         .copy-button {
-            display: inline-block; padding: 9px 14px; /* Adjusted padding */
+            display: inline-block; padding: 10px 15px;
             background-color: #4caf50; color: white;
             border: none; border-radius: 4px; cursor: pointer;
-            font-size: 0.95em; /* Adjusted font size */
-            transition: background-color 0.3s ease;
+            font-size: 1em; transition: background-color 0.3s ease;
             white-space: nowrap;
             text-align: center;
         }
@@ -175,10 +168,9 @@
             margin-top: 15px; table-layout: fixed;
         }
         #data-table th, #data-table td, #custom-tweaks-table th, #custom-tweaks-table td, #maps-modes-table th, #maps-modes-table td {
-            border: 1px solid #444; padding: 7px; /* Adjusted padding */
+            border: 1px solid #444; padding: 8px;
             text-align: left; vertical-align: top;
             font-family: monospace;
-            font-size: 0.95em;
         }
         #data-table th, #custom-tweaks-table th, #maps-modes-table th { background-color: #333; }
         #data-table tr:nth-child(even), #custom-tweaks-table tr:nth-child(even), #maps-modes-table tr:nth-child(even) { background-color: #2c2c2c; }
@@ -212,8 +204,7 @@
             text-overflow: ellipsis; flex-grow: 1;
         }
         .copy-row-button, .delete-tweak-btn {
-            padding: 4px 8px; font-size: 0.9em; /* Adjusted font size */
-            margin-left: 10px; flex-shrink: 0;
+            padding: 4px 8px; font-size: 0.8em; margin-left: 10px; flex-shrink: 0;
             background-color: #4a4a4a; color: #e0e0e0; border: 1px solid #777;
             border-radius: 4px; cursor: pointer; transition: background-color 0.2s;
         }
@@ -232,7 +223,6 @@
         #custom-tweak-form input, #custom-tweak-form select, #custom-tweak-form textarea, #custom-tweak-form button {
             width: 100%; box-sizing: border-box; background-color: #4a4a4a; color: #f0f0f0;
             border: 1px solid #777; border-radius: 4px; padding: 6px; font-family: sans-serif;
-            font-size: 1em;
         }
 
         #custom-tweak-form input[type="text"], 
