--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NuttyB Raptors Configurator</title>
+    <title>NuttyB Configurator</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/luaparse@0.3.1/luaparse.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/luamin@1.0.4/luamin.min.js" defer></script>
@@ -286,7 +286,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>NuttyB Raptors Configurator</h1>
+        <h1>NuttyB Configurator</h1>
         
         <div class="tabs">
             <button class="tab-button active" data-tab="config">Configuration</button>
