--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>NuttyB Configurator for Raptors & Scavengers</h1>
+        <h1>NuttyB Configurator</h1>
         
         <div class="tabs">
             <button class="tab-button active" data-tab="config">Configuration</button>
