--- a/index-dev.html
+++ b/index-dev.html
@@ -493,24 +493,25 @@ function UnitDef_Post(j, k)
 end`;
         
         const luaBossHpTemplate = `--Boss HP __MULTIPLIER_TEXT__X
-for unitName, unitDef in pairs(UnitDefs) do
-	if unitDef.health and unitName:match("^scavengerbossv4") then
-		unitDef.health = math.floor(unitDef.health * __HEALTH_MULTIPLIER__)
-	end
-end`;
-
-        const luaScavHpTemplate = `--Scavenger HP __MULTIPLIER_TEXT__X
-for unitName, unitDef in pairs(UnitDefs) do
-	if unitDef.health and unitName:match("_scav$") and not unitName:match("^scavengerbossv4") then
-		unitDef.health = math.floor(unitDef.health * __HEALTH_MULTIPLIER__)
-  		Spring.Echo("Updated health for", unitName, "to", unitDef.health)
-	end
-end
-
 local originalUnitDef_Post = UnitDef_Post
 
 function UnitDef_Post(unitName, unitDef)
 	originalUnitDef_Post(unitName, unitDef)
+	if unitDef.health and unitName:match("^scavengerbossv4") then
+		unitDef.health = math.floor(unitDef.health * __HEALTH_MULTIPLIER__)
+		Spring.Echo("Updated health for", unitName, "to", unitDef.health)
+	end
+end`;
+
+        const luaScavHpTemplate = `--Scavenger HP __MULTIPLIER_TEXT__X
+local originalUnitDef_Post = UnitDef_Post
+
+function UnitDef_Post(unitName, unitDef)
+	originalUnitDef_Post(unitName, unitDef)
+	if unitDef.health and unitName:match("_scav$") and not unitName:match("^scavengerbossv4") then
+		unitDef.health = math.floor(unitDef.health * __HEALTH_MULTIPLIER__)
+  		Spring.Echo("Updated health for", unitName, "to", unitDef.health)
+	end 
 	if unitName:match("_scav$") then
 		if unitDef.metalcost and type(unitDef.metalcost) == "number" then
  			unitDef.metalcost = math.floor(unitDef.metalcost * __HEALTH_MULTIPLIER__)
