--- a/index-dev.html
+++ b/index-dev.html
@@ -492,7 +492,7 @@ function UnitDef_Post(j, k)
 	end
 end`;
         
-        const luaBossHpTemplate = `--Boss HP __MULTIPLIER_TEXT__X
+        const luaBossHpTemplate = `--Scav Boss HP __MULTIPLIER_TEXT__X
 local originalUnitDef_Post = UnitDef_Post
 
 function UnitDef_Post(unitName, unitDef)
