--- a/index-dev.html
+++ b/index-dev.html
@@ -502,7 +502,7 @@ function UnitDef_Post(unitName, unitDef)
 	end
 end`;
 
-        const luaScavHpTemplate = `--Scavenger HP __MULTIPLIER_TEXT__X
+        const luaScavHpTemplate = `--Scavengers HP __MULTIPLIER_TEXT__X
 local originalUnitDef_Post = UnitDef_Post
 
 function UnitDef_Post(unitName, unitDef)
