--- a/index-dev.html
+++ b/index-dev.html
@@ -422,7 +422,7 @@
         let customOptions = [];
         let gameConfigs = { maps: [], modes: [], base: [], scavengers: [] };
         const CUSTOM_TWEAKS_KEY = 'nuttyb-custom-tweaks';
-        const mainTweaksPrefixes = [ '!bset tweakdefs ', '!bset tweakdefs3 ', '!bset tweakunits ' ];
+        const mainTweaksPrefixes = [ '!bset tweakdefs ', '!bset tweakunits ' ];
         const evolvingCommandersPrefixes = [ '!bset tweakunits1 ', '!bset tweakunits2 ', '!bset tweakunits3 ' ];
         const extraRaptorsPrefixes = [ '!bset tweakdefs4 ', '!bset tweakunits5 ' ];
         const hiddenLabels = [ 'Slow raptors/scavs' ];
