--- a/index-dev.html
+++ b/index-dev.html
@@ -878,9 +878,11 @@ end`;
                     const label = parts[0].trim(), commandBlock = parts[1].trim();
                     let summary = '', status = "Optional", addedToFormGroup = false;
 
+                    // --- RESTORED CODE BLOCK ---
                     if (commandBlock.startsWith('!bset tweakdefs1') || commandBlock.startsWith('!bset tweakdefs2')) {
                         return; 
                     }
+                    // ---------------------------
 
                     if (commandBlock.startsWith('!bset tweakdefs') || commandBlock.startsWith('!bset tweakunits')) {
                         const commandParts = commandBlock.split(' ');
@@ -911,7 +913,7 @@ end`;
             if (groupedOptions.extraRaptors.choices.length > 1) formOptionsConfig.push(groupedOptions.extraRaptors);
             formOptionsConfig = formOptionsConfig.concat(groupedOptions.otherCheckboxes.options);
         }
-        
+
         function generateCommands() {
             const presetCommands = [];
             const mapsSelect = document.getElementById('maps-select');
