--- a/index-dev.html
+++ b/index-dev.html
@@ -998,8 +998,18 @@ end`;
                 }
             }
             
-            finalCommands.push(...presetCommands, ...standardCommands, ...customCommands);
-            
+            // --- OPTIMIZATION LOGIC START ---
+            // Combine all optional tweaks into a single array.
+            const allOptionalTweaks = [...standardCommands, ...customCommands];
+
+            // Sort the tweaks by length in descending order (longest first).
+            // This helps pack the commands more efficiently into the output parts.
+            allOptionalTweaks.sort((a, b) => b.length - a.length);
+
+            // Add the foundational preset commands first, then the sorted optional tweaks.
+            finalCommands.push(...presetCommands, ...allOptionalTweaks);
+            // --- OPTIMIZATION LOGIC END ---
+
             const primaryModeSelect = document.getElementById('primary-mode-select');
             const isScavengers = primaryModeSelect && primaryModeSelect.value === 'Scavengers';
 
