--- a/index-dev.html
+++ b/index-dev.html
@@ -293,7 +293,7 @@
             <button class="tab-button" data-tab="data">Data</button>
             <button class="tab-button" data-tab="custom">Custom</button>
             <button class="tab-button" data-tab="links">Links</button>
-            <button class="tab-button" data-tab="discussions">Discussions</button>
+            <button class="tab-button" data-tab="comments">Comments</button>
         </div>
 
         <div id="config-tab" class="tab-content active">
@@ -416,7 +416,8 @@
             <p>Loading links...</p>
         </div>
 
-        <div id="discussions-tab" class="tab-content">
+        <div id="comments-tab" class="tab-content">
+            <p>Share feedback, tips, tweaks or widgets here.</p>
             <script src="https://giscus.app/client.js"
                     data-repo="rcorex/nuttyb-config"
                     data-repo-id="R_kgDOPJlKyQ"
