--- a/index-dev.html
+++ b/index-dev.html
@@ -421,13 +421,13 @@
             <script src="https://giscus.app/client.js"
                     data-repo="rcorex/nuttyb-config"
                     data-repo-id="R_kgDOPJlKyQ"
-                    data-category="Announcements"
+                    data-category="General"
                     data-category-id="DIC_kwDOPJlKyc4CtRUV"
                     data-mapping="pathname"
                     data-strict="0"
                     data-reactions-enabled="1"
                     data-emit-metadata="0"
-                    data-input-position="top"
+                    data-input-position="bottom"
                     data-theme="dark"
                     data-lang="en"
                     data-loading="lazy"
