--- a/index-dev.html
+++ b/index-dev.html
@@ -417,7 +417,7 @@
         </div>
 
         <div id="comments-tab" class="tab-content">
-            <p>Share feedback, tips, tweaks or widgets here.</p>
+            <p>Share feedback, tips, tweaks or widgets here. Edit comments <a href="https://github.com/rcorex/nuttyb-config/discussions/categories/general" target="_blank" rel="noopener noreferrer">here.</a></p>
             <script src="https://giscus.app/client.js"
                     data-repo="rcorex/nuttyb-config"
                     data-repo-id="R_kgDOPJlKyQ"
@@ -425,7 +425,7 @@
                     data-category-id="DIC_kwDOPJlKyc4CtRUV"
                     data-mapping="pathname"
                     data-strict="0"
-                    data-reactions-enabled="1"
+                    data-reactions-enabled="0"
                     data-emit-metadata="0"
                     data-input-position="bottom"
                     data-theme="dark"
