--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
             <button class="tab-button" data-tab="data">Data</button>
             <button class="tab-button" data-tab="custom">Custom</button>
             <button class="tab-button" data-tab="links">Links</button>
+            <button class="tab-button" data-tab="comments">Comments</button>
         </div>
 
         <div id="config-tab" class="tab-content active">
@@ -413,6 +414,26 @@
 
         <div id="links-tab" class="tab-content">
             <p>Loading links...</p>
+        </div>
+
+        <div id="comments-tab" class="tab-content">
+            <p>Share feedback, tips, tweaks or widgets here. Edit comments <a href="https://github.com/rcorex/nuttyb-config/discussions/2" target="_blank" rel="noopener noreferrer">here.</a></p>
+		<script src="https://giscus.app/client.js"
+			data-repo="rcorex/nuttyb-config"
+			data-repo-id="R_kgDOPJlKyQ"
+			data-category="Announcements"
+			data-category-id="DIC_kwDOPJlKyc4CtRUV"
+			data-mapping="pathname"
+			data-strict="0"
+			data-reactions-enabled="0"
+			data-emit-metadata="0"
+			data-input-position="bottom"
+			data-theme="dark"
+			data-lang="en"
+			data-loading="lazy"
+			crossorigin="anonymous"
+			async>
+		</script>
         </div>
     </div>
 
